Fixes error in pronunciations

--- a/eng_to_spa_tr/urls.properties
+++ b/eng_to_spa_tr/urls.properties
@@ -1,2 +1,2 @@
-url_pronc=https://www.collinsdictionary.com/dictionary/english-spanish/{}
+url_pronc=http://www.macmillandictionary.com/dictionary/british/{}
 url_tr=http://context.reverso.net/traduccion/ingles-espanol/{}
