--- a/eng_to_spa_tr/urls.properties
+++ b/eng_to_spa_tr/urls.properties
@@ -1,2 +1,4 @@
 url_pronc=http://www.macmillandictionary.com/dictionary/british/{}
 url_tr=http://context.reverso.net/traduccion/ingles-espanol/{}
+pattern_pronc=class="SEP PRON-before"> /</span>([^<]+)<
+pattern_tr=ltr ">([^\r\n]+)<.*[\r\n]*(.*pos ">([^<]*)<)?
