--- a/eng_to_spa_tr/urls.properties
+++ b/eng_to_spa_tr/urls.properties
@@ -1,4 +1,6 @@
 url_pronc=https://es.oxforddictionaries.com/traducir/ingles-espanol/{}
 url_tr=http://context.reverso.net/traduccion/ingles-espanol/{}
+url_tr2=https://es.oxforddictionaries.com/traducir/ingles-espanol/{}
 pattern_pronc=class="phoneticSpelling">([^<]+)<
 pattern_tr=ltr ">([^\r\n]+)<.*[\r\n]*(.*pos ">([^<]*)<)?
+pattern_tr2=class="tr"><span>([^<]+)<
