--- a/eng_to_spa_tr/config.properties
+++ b/eng_to_spa_tr/config.properties
@@ -1,7 +1,7 @@
 default_dict=dictionary.dic
-url_pronc=https://es.oxforddictionaries.com/traducir/ingles-espanol/{}
+url_pronc=http://www.macmillandictionary.com/dictionary/british/{}
 url_tr=http://context.reverso.net/traduccion/ingles-espanol/{}
 url_tr2=https://es.oxforddictionaries.com/traducir/ingles-espanol/{}
-pattern_pronc=class="phoneticSpelling">([^<]+)<
+pattern_pronc=class="SEP PRON-before"> /</span>([^<]+)<
 pattern_tr=ltr ">([^\r\n]+)<.*[\r\n]*(.*pos ">([^<]+)<)?
 pattern_tr2=class="tr"><span>([^<]+)<
