Fixed regular expresion of traductor

--- a/eng_to_spa_tr/config.properties
+++ b/eng_to_spa_tr/config.properties
@@ -3,5 +3,5 @@ url_pronc=http://www.macmillandictionary.com/dictionary/british/{}
 url_tr=http://context.reverso.net/traduccion/ingles-espanol/{}
 url_tr2=https://es.oxforddictionaries.com/traducir/ingles-espanol/{}
 pattern_pronc=class="SEP PRON-before"> /</span>([^<]+)<
-pattern_tr=ltr ">([^\r\n]+)<.*[\r\n]*(.*pos ">([^<]+)<)?
+pattern_tr=.*class="translation   ltr[^\r\n]*[\r\n]+.*ltr ">([^\r\n]+)<.*[\r\n]*(.*pos ">([^<]+)<)?
 pattern_tr2=class="tr"><span>([^<]+)<
