Pronunciation info improved

--- a/eng_to_spa_tr/config.properties
+++ b/eng_to_spa_tr/config.properties
@@ -1,7 +1,10 @@
 default_dict=dictionary.dic
-url_pronc=http://www.macmillandictionary.com/dictionary/british/{}
+url_pronc=http://dictionary.cambridge.org/dictionary/english/{}
 url_tr=http://context.reverso.net/traduccion/ingles-espanol/{}
 url_tr2=https://es.oxforddictionaries.com/traducir/ingles-espanol/{}
-pattern_pronc=class="SEP PRON-before"> /</span>([^<]+)<
+pattern_pronc_uk_word=pron-region="UK" class="pron-info"><span class="uk"><span class="region">uk</span> <span title="[\\w]+[^\r\n]+[\r\n]+.*span class="ipa">(.+)<span pron-region
+pattern_pronc_us_word=pron-region="US" class="pron-info"><span class="us"><span class="region">us</span> <span title="[\\w]+[^\r\n]*[\r\n]+.*span class="ipa">(.+)<span pron-region
+pattern_pronc_uk_phrasal=pron-region="UK" class="pron-info"><span class="uk"><span class="region">uk</span> <span title="[\\w]+-[\\w]+[^\r\n]*[\r\n]+.*span class="ipa">(.+)<span pron-region
+pattern_pronc_us_phrasal=pron-region="US" class="pron-info"><span class="us"><span class="region">us</span> <span title="[\\w]+-[\\w]+[^\r\n]*[\r\n]+.*span class="ipa">(.+)<span pron-region
 pattern_tr=.*class="translation   ltr[^\r\n]*[\r\n]+.*ltr ">([^\r\n]+)<.*[\r\n]*(.*pos ">([^<]+)<)?
 pattern_tr2=class="tr"><span>([^<]+)<
