Implement config file location

--- a/eng_to_spa_tr/config.properties
+++ b/eng_to_spa_tr/config.properties
@@ -1,4 +1,4 @@
-default_dict=/home/pi/tmp/docs/games/eng_to_spa_tr/dictionary.dic
+default_dict=dictionary.dic
 url_pronc=http://dictionary.cambridge.org/dictionary/english/{}
 url_tr=http://context.reverso.net/traduccion/ingles-espanol/{}
 url_tr2=https://es.oxforddictionaries.com/traducir/ingles-espanol/{}
