--- a/eng_to_spa_tr/config.properties
+++ b/eng_to_spa_tr/config.properties
@@ -3,10 +3,11 @@ url_pronc=http://dictionary.cambridge.org/dictionary/english/{}
 url_tr=http://context.reverso.net/traduccion/ingles-espanol/{}
 url_tr2=https://es.oxforddictionaries.com/traducir/ingles-espanol/{}
 pattern_pronc_uk_word=pron-region="UK" class="pron-info"><span class="uk"><span class="region">uk</span> <span title="[\\w]+[^\r\n]+[\r\n]+.*span class="ipa">(.+)<span pron-region
+pattern_pronc_uk_strong_word=class="lab">strong</span> /<span class="ipa">(.+)<span class="pron-info"
 pattern_pronc_us_word=pron-region="US" class="pron-info"><span class="us"><span class="region">us</span> <span title="[\\w]+[^\r\n]*[\r\n]+.*span class="ipa">(.+)<span pron-region
 pattern_pronc_uk_phrasal=pron-region="UK" class="pron-info"><span class="uk"><span class="region">uk</span> <span title="[\\w]+-[\\w]+[^\r\n]*[\r\n]+.*span class="ipa">(.+)<span pron-region
 pattern_pronc_us_phrasal=pron-region="US" class="pron-info"><span class="us"><span class="region">us</span> <span title="[\\w]+-[\\w]+[^\r\n]*[\r\n]+.*span class="ipa">(.+)<span pron-region
-pattern_pronc_generic=class="pron">/<span class="ipa">(.+)<span pron
-pattern_pronc_generic2=class="pron">/<span class="ipa">(.+)[\r\n]+
+pattern_pronc_generic=class="lab">strong</span> /<span class="ipa">(.+)<span class="pron-info"
+pattern_pronc_generic2=class="lab">strong</span> /<span class="ipa">(.+)[\r\n]+
 pattern_tr=.*class="translation   ltr[^\r\n]*[\r\n]+.*ltr ">([^\r\n]+)<.*[\r\n]*(.*pos ">([^<]+)<)?
 pattern_tr2=class="tr"><span>([^<]+)<
