--- a/eng_to_spa_tr/config.properties
+++ b/eng_to_spa_tr/config.properties
@@ -1,5 +1,6 @@
 default_dict=dictionary.dic
 url_pronc=http://dictionary.cambridge.org/dictionary/english/{}
+url_pronc2=http://www.macmillandictionary.com/dictionary/british/{}
 url_tr=http://context.reverso.net/traduccion/ingles-espanol/{}
 url_tr2=https://es.oxforddictionaries.com/traducir/ingles-espanol/{}
 url_tr3=http://dictionary.reverso.net/english-spanish/{}
@@ -10,6 +11,7 @@ pattern_pronc_uk_phrasal=pron-region="UK" class="pron-info"><span class="uk"><sp
 pattern_pronc_us_phrasal=pron-region="US" class="pron-info"><span class="us"><span class="region">us</span> <span title="[\\w]+-[\\w]+[^\r\n]*[\r\n]+.*span class="ipa">(.+)<span pron-region
 pattern_pronc_generic=class="lab">strong</span> /<span class="ipa">(.+)<span class="pron-info"
 pattern_pronc_generic2=class="lab">strong</span> /<span class="ipa">(.+)[\r\n]+
+pattern_pronc_generic3=class="SEP PRON-before"> /</span>(.+)<span class="SEP PRON-after">
 pattern_tr=.*class="translation   ltr[^\r\n]*[\r\n]+.*ltr ">([^\r\n]+)<.*[\r\n]*(.*pos ">([^<]+)<)?
 pattern_tr2=class="tr"><span>([^<]+)<
 pattern_tr3=Translation" direction="target" class="tgtColl" lang="1034">(.+)<
